--- a/moviestorevenv/pyvenv.cfg
+++ b/moviestorevenv/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Users\Peter\AppData\Local\Programs\Python\Python312
+home = C:\Python313
 include-system-site-packages = false
-version = 3.12.5
-executable = C:\Users\Peter\AppData\Local\Programs\Python\Python312\python.exe
-command = C:\Users\Peter\AppData\Local\Programs\Python\Python312\python.exe -m venv C:\Users\Peter\Source\Repos\moviesstore\moviestorevenv
+version = 3.13.2
+executable = C:\Python313\python.exe
+command = C:\Python313\python.exe -m venv C:\Users\LENOVO\Documents\ProjectsShared\moviesproject\moviestorevenv
